--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,1 @@
-{
-  "version": 2,
-  "framework": "nextjs",
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "installCommand": "npm install",
-  "github": {
-    "silent": true
-  }
-}
+{"buildCommand":"npm run build","outputDirectory":".next","installCommand":"npm install"}
